--- a/android-whereyougo/res/layout/layout_input.xml
+++ b/android-whereyougo/res/layout/layout_input.xml
@@ -33,10 +33,13 @@
 				android:layout_marginTop="10dp"
 				android:textSize="20dp"
 				android:gravity="center_horizontal"/>
+
 			<LinearLayout
-				android:id="@+id/layoutInputLinearLayout01"
-				android:layout_width="fill_parent"
-				android:layout_height="wrap_content"/>
+			    android:id="@+id/layoutInputLinearLayout01"
+			    android:layout_width="fill_parent"
+			    android:layout_height="wrap_content"
+			    android:orientation="horizontal" />
+
 		</LinearLayout>
 	</ScrollView>
 </RelativeLayout>
