--- a/android-whereyougo/res/layout/layout_main.xml
+++ b/android-whereyougo/res/layout/layout_main.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
 
 	<LinearLayout style="@style/PanelTopMain">
 		<ImageButton
@@ -14,12 +14,18 @@
 		<TextView style="@style/TitleText" />
     </LinearLayout>
 
-    <LinearLayout
+	<LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        android:padding="6dip"
-        android:background="@android:color/white">
-    </LinearLayout>
+        android:layout_height="fill_parent"	    
+	     style="@style/MainScreenLine">
+
+		<ListView
+		    android:id="@+id/listView1"
+		    android:layout_width="fill_parent"
+		    android:layout_height="fill_parent" >
+
+		</ListView>
+
+	</LinearLayout>	
+	
 </LinearLayout>
