first draft of xml based preferences

--- a/android-whereyougo/res/values/strings_pref.xml
+++ b/android-whereyougo/res/values/strings_pref.xml
@@ -100,4 +100,7 @@
     <string name="pref_wherigo_engine_username_desc">Choose your user name</string>
     <string name="pref_wherigo_engine_replace_username_desc">Replace the cartridge build-in username with custom user name</string>
     <string name="pref_fakekey_main_screen">0815</string>
+    <string name="pref_wherigo_engine_platform">android-openwig</string>
+    <string name="pref_wherigo_engine_platform_desc">Choose name of the platform</string>
+    <string name="pref_waypoints">Wegpunkte</string>
 </resources>
