--- a/android-whereyougo/res/values/arrays_prefs.xml
+++ b/android-whereyougo/res/values/arrays_prefs.xml
@@ -10,5 +10,18 @@
         <item name="1">1</item>
         <item name="2">2</item>
     </string-array>
-    
+
+    <string-array name="pref_sensors_orient_filter_strings">
+        <item name="0">@string/pref_sensors_orient_filter_no_filter</item>
+        <item name="1">@string/pref_sensors_orient_filter_ligth</item>
+        <item name="2">@string/pref_sensors_orient_filter_medium</item>
+        <item name="3">@string/pref_sensors_orient_filter_heavy</item>
+    </string-array>
+    <string-array name="pref_sensors_orient_filter_values">
+        <item name="0">0</item>
+        <item name="1">1</item>
+        <item name="2">2</item>
+        <item name="3">3</item>
+    </string-array>
+        
 </resources>
