--- a/android-whereyougo/res/values-ar/strings_pref.xml
+++ b/android-whereyougo/res/values-ar/strings_pref.xml
@@ -78,7 +78,7 @@
     <string name="pref_units_angle_desc">واحدات الزوايا على الشاشة</string>
     <string name="pref_units_angle_mil">Angular mil</string>
     <string name="pref_units_coo_latlon">صيغة خط طول / خط عرض</string>
-    <string name="pref_units_coo_latlon_dec">14,94323 </string>
+    <string name="pref_units_coo_latlon_dec">DDD,DDDDDD°</string>
     <string name="pref_units_coo_latlon_min">14  52.123\'</string>
     <string name="pref_units_coo_latlon_sec">14  52\' 12.34\'\'</string>
     <string name="pref_units_coo_latlon_desc">Coordinates (latitude/longitude) format for display</string>
