--- a/android-whereyougo/res/values-fi/strings_pref.xml
+++ b/android-whereyougo/res/values-fi/strings_pref.xml
@@ -78,7 +78,7 @@
     <string name="pref_units_angle_desc">Kulmayksikkö näytettäväksi</string>
     <string name="pref_units_angle_mil">Piiru</string>
     <string name="pref_units_coo_latlon">Lev/Pit-muoto</string>
-    <string name="pref_units_coo_latlon_dec">14,94323°</string>
+    <string name="pref_units_coo_latlon_dec">DDD,DDDDDD°</string>
     <string name="pref_units_coo_latlon_min">14° 52.123\'</string>
     <string name="pref_units_coo_latlon_sec">14° 52\' 12.34\'\'</string>
     <string name="pref_units_coo_latlon_desc">Näytettävä koordinaattien (leveys-/pituusaste) muoto</string>
