--- a/android-whereyougo/res/values-it/strings_pref.xml
+++ b/android-whereyougo/res/values-it/strings_pref.xml
@@ -78,7 +78,7 @@
     <string name="pref_units_angle_desc">Unità angolare per la visualizzazione</string>
     <string name="pref_units_angle_mil">Mil angolare</string>
     <string name="pref_units_coo_latlon">Formato Lat/Lon</string>
-    <string name="pref_units_coo_latlon_dec">14,94323°</string>
+    <string name="pref_units_coo_latlon_dec">DDD,DDDDDD°</string>
     <string name="pref_units_coo_latlon_min">14° 52.123\'</string>
     <string name="pref_units_coo_latlon_sec">14° 52\' 12.34\'\'</string>
     <string name="pref_units_coo_latlon_desc">Formato di visualizzazione delle coordinate (latitudine/longitudine)</string>
