--- a/android-whereyougo/res/values-ko/strings_pref.xml
+++ b/android-whereyougo/res/values-ko/strings_pref.xml
@@ -78,7 +78,7 @@
     <string name="pref_units_angle_desc">표시할 각도 단위</string>
     <string name="pref_units_angle_mil">각도 밀</string>
     <string name="pref_units_coo_latlon">위도/경도 형식</string>
-    <string name="pref_units_coo_latlon_dec">14,94323°</string>
+    <string name="pref_units_coo_latlon_dec">DDD,DDDDDD°</string>
     <string name="pref_units_coo_latlon_min">14° 52.123\'</string>
     <string name="pref_units_coo_latlon_sec">14° 52\' 12.34\'\'</string>
     <string name="pref_units_coo_latlon_desc">좌표 (위도/경도) 표시 형식</string>
