--- a/android-whereyougo/res/values-nl/strings_pref.xml
+++ b/android-whereyougo/res/values-nl/strings_pref.xml
@@ -78,7 +78,7 @@
     <string name="pref_units_angle_desc">Weergave hoekweergave</string>
     <string name="pref_units_angle_mil">Mills</string>
     <string name="pref_units_coo_latlon">Lat / Lon-formaat</string>
-    <string name="pref_units_coo_latlon_dec">14,94323 °</string>
+    <string name="pref_units_coo_latlon_dec">DDD,DDDDDD°</string>
     <string name="pref_units_coo_latlon_min">14 ° 52,123 \ \'</string>
     <string name="pref_units_coo_latlon_sec">14 ° 52\' 12.34\'\ \'</string>
     <string name="pref_units_coo_latlon_desc">Coördinaten (lengte / breedte) opmaak voor weergave</string>
