--- a/android-whereyougo/res/values-pl/strings_pref.xml
+++ b/android-whereyougo/res/values-pl/strings_pref.xml
@@ -78,7 +78,7 @@
     <string name="pref_units_angle_desc">Wyświetlane jednostki kątowe</string>
     <string name="pref_units_angle_mil">Tysiączna</string>
     <string name="pref_units_coo_latlon">Format szer/dług geograficznej</string>
-    <string name="pref_units_coo_latlon_dec">14,94323°</string>
+    <string name="pref_units_coo_latlon_dec">DDD,DDDDDD°</string>
     <string name="pref_units_coo_latlon_min">14° 52.123\'</string>
     <string name="pref_units_coo_latlon_sec">14° 52\' 12.34\'\'</string>
     <string name="pref_units_coo_latlon_desc">Format wyświetlania współrzędnych (długość i szerokość geograficzna)</string>
