change fromat string pref_units_coo_latlon_min, pref_units_coo_latlon_sec

--- a/android-whereyougo/res/values-es/strings_pref.xml
+++ b/android-whereyougo/res/values-es/strings_pref.xml
@@ -78,9 +78,9 @@
     <string name="pref_units_angle_desc">Unidades angulares en pantalla</string>
     <string name="pref_units_angle_mil">Mil angular (OTAN)</string>
     <string name="pref_units_coo_latlon">Formato de Latitud / Longitud</string>
-    <string name="pref_units_coo_latlon_dec">DDD,DDDDDD°</string>
-    <string name="pref_units_coo_latlon_min">14º52.123\'</string>
-    <string name="pref_units_coo_latlon_sec">14°52\'12.34\'\'</string>
+    <string name="pref_units_coo_latlon_dec">DDD.DDDDDD°</string>
+    <string name="pref_units_coo_latlon_min">DDD° MM.MMM\\'</string>
+    <string name="pref_units_coo_latlon_sec">DDD° MM\\' SS.SS\\"</string>
     <string name="pref_units_coo_latlon_desc">Formato de coordenadas para mostrar (lat/long)</string>
     <string name="pref_units_length">Unidad de longitud</string>
     <string name="pref_units_length_desc">Seleccionar las unidades por defecto en pantalla</string>
