--- a/android-whereyougo/res/values-ko/strings_pref.xml
+++ b/android-whereyougo/res/values-ko/strings_pref.xml
@@ -79,8 +79,8 @@
     <string name="pref_units_angle_mil">각도 밀</string>
     <string name="pref_units_coo_latlon">위도/경도 형식</string>
     <string name="pref_units_coo_latlon_dec">DDD,DDDDDD°</string>
-    <string name="pref_units_coo_latlon_min">14° 52.123\'</string>
-    <string name="pref_units_coo_latlon_sec">14° 52\' 12.34\'\'</string>
+    <string name="pref_units_coo_latlon_min">DDD° MM.MMM\\'</string>
+    <string name="pref_units_coo_latlon_sec">DDD° MM\\' SS.SS\\"</string>
     <string name="pref_units_coo_latlon_desc">좌표 (위도/경도) 표시 형식</string>
     <string name="pref_units_length">길이 단위</string>
     <string name="pref_units_length_desc">기본 표시 단위 선택</string>
