--- a/android-whereyougo/res/values-ru/strings_pref.xml
+++ b/android-whereyougo/res/values-ru/strings_pref.xml
@@ -80,7 +80,7 @@
     <string name="pref_units_coo_latlon">Формат координат</string>
     <string name="pref_units_coo_latlon_dec">DDD,DDDDDD°</string>
     <string name="pref_units_coo_latlon_min">14°52.123\'</string>
-    <string name="pref_units_coo_latlon_sec">14°52\'12.34\'\'</string>
+    <string name="pref_units_coo_latlon_sec">DDD° MM\\' SS.SS\\"</string>
     <string name="pref_units_coo_latlon_desc">Формат отображения координат</string>
     <string name="pref_units_length">Единицы расстояний</string>
     <string name="pref_units_length_desc">Единицы отображения расстояний</string>
