--- a/android-whereyougo/res/values-sk/strings_pref.xml
+++ b/android-whereyougo/res/values-sk/strings_pref.xml
@@ -79,8 +79,8 @@
     <string name="pref_units_angle_mil">Mil (dielec)</string>
     <string name="pref_units_coo_latlon">Formát zem. dĺžky/šírky</string>
     <string name="pref_units_coo_latlon_dec">DDD,DDDDDD°</string>
-    <string name="pref_units_coo_latlon_min">14° 52,123\'</string>
-    <string name="pref_units_coo_latlon_sec">14° 52\' 12.34\'\'</string>
+    <string name="pref_units_coo_latlon_min">DDD° MM,MMM\\'</string>
+    <string name="pref_units_coo_latlon_sec">DDD° MM\\' SS.SS\\"</string>
     <string name="pref_units_coo_latlon_desc">Formát zobrazenia súradníc (zem. dĺžka/šírka)</string>
     <string name="pref_units_length">Dĺžkové jednotky</string>
     <string name="pref_units_length_desc">Voľba dĺžkových jednotiek</string>
