--- a/android-whereyougo/res/values-el/strings_pref.xml
+++ b/android-whereyougo/res/values-el/strings_pref.xml
@@ -79,8 +79,8 @@
     <string name="pref_units_angle_mil">Γωνιακό εκ.</string>
     <string name="pref_units_coo_latlon">Μορφή του Γεωγραφικού Πλάτους/Μήκους</string>
     <string name="pref_units_coo_latlon_dec">DDD,DDDDDD°</string>
-    <string name="pref_units_coo_latlon_min">DDD° MM,MMM\\'</string>
-    <string name="pref_units_coo_latlon_sec">DDD° MM\\' SS.SS\\"</string>
+    <string name="pref_units_coo_latlon_min">DDD° MM,MMM\'</string>
+    <string name="pref_units_coo_latlon_sec">DDD° MM\' SS.SS\"</string>
     <string name="pref_units_coo_latlon_desc">Διάταξη εμφάνισης συντεταγμένων (γεωγραφικό μήκος/γεωγραφικό πλάτος)</string>
     <string name="pref_units_length">Μήκος μονάδων</string>
     <string name="pref_units_length_desc">Επιλέξτε τις προκαθορισμένες μονάδες εμφάνισης</string>
