--- a/android-whereyougo/res/values-fi/strings_pref.xml
+++ b/android-whereyougo/res/values-fi/strings_pref.xml
@@ -79,8 +79,8 @@
     <string name="pref_units_angle_mil">Piiru</string>
     <string name="pref_units_coo_latlon">Lev/Pit-muoto</string>
     <string name="pref_units_coo_latlon_dec">DDD,DDDDDD°</string>
-    <string name="pref_units_coo_latlon_min">DDD° MM.MMM\\'</string>
-    <string name="pref_units_coo_latlon_sec">DDD° MM\\' SS.SS\\"</string>
+    <string name="pref_units_coo_latlon_min">DDD° MM.MMM\'</string>
+    <string name="pref_units_coo_latlon_sec">DDD° MM\' SS.SS\"</string>
     <string name="pref_units_coo_latlon_desc">Näytettävä koordinaattien (leveys-/pituusaste) muoto</string>
     <string name="pref_units_length">Pituus yksiköt</string>
     <string name="pref_units_length_desc">Valitse oletusyksikkö</string>
