--- a/android-whereyougo/res/values-fr/strings_pref.xml
+++ b/android-whereyougo/res/values-fr/strings_pref.xml
@@ -79,8 +79,8 @@
     <string name="pref_units_angle_mil">millième angulaire</string>
     <string name="pref_units_coo_latlon">Format Lat / Lon</string>
     <string name="pref_units_coo_latlon_dec">DDD,DDDDDD°</string>
-    <string name="pref_units_coo_latlon_min">DDD° MM,MMM\\'</string>
-    <string name="pref_units_coo_latlon_sec">DDD° MM\\' SS,SS\\"</string>
+    <string name="pref_units_coo_latlon_min">DDD° MM,MMM\'</string>
+    <string name="pref_units_coo_latlon_sec">DDD° MM\' SS,SS\"</string>
     <string name="pref_units_coo_latlon_desc">Coordonnées (latitude / longitude) pour l\'affichage</string>
     <string name="pref_units_length">Unités de longueur</string>
     <string name="pref_units_length_desc">Choisissez les unités d\'affichage par défaut</string>
