--- a/android-whereyougo/res/values-it/strings_pref.xml
+++ b/android-whereyougo/res/values-it/strings_pref.xml
@@ -79,8 +79,8 @@
     <string name="pref_units_angle_mil">Mil angolare</string>
     <string name="pref_units_coo_latlon">Formato Lat/Lon</string>
     <string name="pref_units_coo_latlon_dec">DDD,DDDDDD°</string>
-    <string name="pref_units_coo_latlon_min">DDD° MM.MMM\\'</string>
-    <string name="pref_units_coo_latlon_sec">DDD° MM\\' SS.SS\\"</string>
+    <string name="pref_units_coo_latlon_min">DDD° MM.MMM\'</string>
+    <string name="pref_units_coo_latlon_sec">DDD° MM\' SS.SS\"</string>
     <string name="pref_units_coo_latlon_desc">Formato di visualizzazione delle coordinate (latitudine/longitudine)</string>
     <string name="pref_units_length">Unità di lunghezza</string>
     <string name="pref_units_length_desc">Scegliere le unità di visualizzazione predefinite</string>
