--- a/android-whereyougo/res/values-nl/strings_pref.xml
+++ b/android-whereyougo/res/values-nl/strings_pref.xml
@@ -79,8 +79,8 @@
     <string name="pref_units_angle_mil">Mills</string>
     <string name="pref_units_coo_latlon">Lat / Lon-formaat</string>
     <string name="pref_units_coo_latlon_dec">DDD,DDDDDD°</string>
-    <string name="pref_units_coo_latlon_min">DDD° MM,MMM\\'</string>
-    <string name="pref_units_coo_latlon_sec">DDD° MM\\' SS,SS\\"</string>
+    <string name="pref_units_coo_latlon_min">DDD° MM,MMM\'</string>
+    <string name="pref_units_coo_latlon_sec">DDD° MM\' SS,SS\"</string>
     <string name="pref_units_coo_latlon_desc">Coördinaten (lengte / breedte) opmaak voor weergave</string>
     <string name="pref_units_length">Lengte eenheid</string>
     <string name="pref_units_length_desc">Kies standaard weergave-eenheden</string>
