--- a/android-whereyougo/res/values-pl/strings_pref.xml
+++ b/android-whereyougo/res/values-pl/strings_pref.xml
@@ -79,8 +79,8 @@
     <string name="pref_units_angle_mil">Tysiączna</string>
     <string name="pref_units_coo_latlon">Format szer/dług geograficznej</string>
     <string name="pref_units_coo_latlon_dec">DDD,DDDDDD°</string>
-    <string name="pref_units_coo_latlon_min">DDD° MM.MMM\\'</string>
-    <string name="pref_units_coo_latlon_sec">DDD° MM\\' SS.SS\\"</string>
+    <string name="pref_units_coo_latlon_min">DDD° MM.MMM\'</string>
+    <string name="pref_units_coo_latlon_sec">DDD° MM\' SS.SS\"</string>
     <string name="pref_units_coo_latlon_desc">Format wyświetlania współrzędnych (długość i szerokość geograficzna)</string>
     <string name="pref_units_length">Jednostki długości</string>
     <string name="pref_units_length_desc">Wybierz domyśnie wyświetlane jednostki</string>
