--- a/android-whereyougo/res/values-pt-rPT/strings_pref.xml
+++ b/android-whereyougo/res/values-pt-rPT/strings_pref.xml
@@ -79,8 +79,8 @@
     <string name="pref_units_angle_mil">Milésimos angulares</string>
     <string name="pref_units_coo_latlon">Formato Lat/Lon</string>
     <string name="pref_units_coo_latlon_dec">DDD,DDDDDD°</string>
-    <string name="pref_units_coo_latlon_min">DDD° MM.MMM\\'</string>
-    <string name="pref_units_coo_latlon_sec">DDD° MM\\' SS.SS\\"</string>
+    <string name="pref_units_coo_latlon_min">DDD° MM.MMM\'</string>
+    <string name="pref_units_coo_latlon_sec">DDD° MM\' SS.SS\"</string>
     <string name="pref_units_coo_latlon_desc">Formato de coordenadas (latitude / longitude) para exibição</string>
     <string name="pref_units_length">Unidades de comprimento</string>
     <string name="pref_units_length_desc">Escolha as unidades de visualização padrão</string>
