--- a/android-whereyougo/res/layout/layout_main.xml
+++ b/android-whereyougo/res/layout/layout_main.xml
@@ -22,7 +22,8 @@
 		<ListView
 		    android:id="@+id/listView1"
 		    android:layout_width="fill_parent"
-		    android:layout_height="fill_parent" >
+		    android:layout_height="fill_parent"
+		    android:textFilterEnabled="false" >
 
 		</ListView>
 
