--- a/android-whereyougo/res/layout/satellite_screen_activity.xml
+++ b/android-whereyougo/res/layout/satellite_screen_activity.xml
@@ -2,14 +2,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/var_custom_screen_bg" >
+    android:background="@drawable/var_custom_screen_bg"
+    android:orientation="vertical" >
 
     <LinearLayout
         android:id="@+id/linear_layout_skyplot"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_above="@+id/linear_layout_bottom"
-        android:gravity="center" >
+        android:gravity="center"
+        android:orientation="vertical" >
+
     </LinearLayout>
 
     <LinearLayout
@@ -125,7 +128,7 @@
                 android:text="@string/declination" />
 
             <TextView
-                android:id="@+id/text_view_declination"
+                android:id="@+id/text_view_progress"
                 style="@style/CustomScreenTextValue" />
         </LinearLayout>
 
