--- a/android-whereyougo/res/values/arrays_prefs.xml
+++ b/android-whereyougo/res/values/arrays_prefs.xml
@@ -24,6 +24,20 @@
         <item name="3">3</item>
     </string-array>
     
+<string-array name="pref_cartridgelist_sorting_strings">
+        <item name="0">A-Z</item>
+        <item name="1">Z-A</item>
+        <item name="2">Near</item>
+        <item name="3">Far</item>
+    </string-array>
+    <string-array name="pref_cartridgelist_sorting_values">
+        <item name="0">0</item>
+        <item name="1">1</item>
+        <item name="2">2</item>
+        <item name="3">3</item>
+    </string-array>    
+
+    
     <string-array name="pref_language_strings">
 	    <item name="0">@string/pref_language_default</item>
 	    <item name="1">@string/pref_language_ar</item>
